<resources>
    <string name="app_name">DepositTest</string>
    <string name="client_name">客户姓名</string>
    <string name="select_type">请选择证件类型</string>
    <string name="certificate_type">证件类型</string>
    <string name="set_name">请输入客户姓名</string>
    <string name="certificate_phone">证件号码</string>
    <string name="open_an_account">开户银行</string>
    <string name="select_open_an_account">请选择开户银行</string>
    <string name="province">省份</string>
    <string name="select_province">请选择省份</string>
    <string name="city">城市</string>
    <string name="select_city">请选择城市</string>
    <string name="opening_bank">开户行</string>
    <string name="select_opening_bank">请选择开户行</string>
    <string name="credit_card_numbers">银行卡号</string>
    <string name="cell_phone_number">手机号码</string>
    <string name="dynamic_code">动态码</string>
    <string name="set_certificate_phone">请输入证件号码</string>
    <string name="set_credit_card_numbers">请输入您本人银行卡号</string>
    <string name="set_cell_phone_number">请输入银行预留手机号码</string>
    <string name="set_dynamic_code">请输入短信动态码</string>
    <string name="free_Access">免费获取</string>
    <string name="list_the_limit"><u>支持银行与限额列表</u></string>
    <string name="confirm_the_opening">确认开通</string>
    <string name="you_confirm_the_opening">点击确认开通表示您同意</string>
    <string name="存管银行">deposit_bank</string>
    <string name="sh_bank">上海银行</string>
    <string name="deposit_bank">存管银行</string>
    <string name="deposit_account">存管账户</string>
    <string name="personal_information">个人信息</string>
    <string name="customer_name">客户姓名</string>
    <string name="identity_card">身份证</string>
    <string name="id_number">证件号码</string>
    <string name="band_main_account">绑定主账号信息</string>
    <string name="reserved_phone">银行预留手机号</string>
    <string name="deposit_bank1">存管银行：</string>
    <string name="deposit_account1">存管账号：</string>
    <string name="customer_name1">客户姓名：</string>
    <string name="return1">返  回</string>
    <string name="verification_code">验证码</string>
    <string name="set_dynamic">请输入验证码</string>
    <string name="check_the_ad">一键查征信</string>
    <string name="check_report">查看报告</string>
</resources>
