<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.toos.lxh.deposittest.DredgeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:drawableTop="@mipmap/start_access"
            android:text="恭喜，您的银行存管已开通成功！"
            android:textColor="@color/button_colcor"
            android:drawablePadding="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dibu"
            />
        <!-- 存管银行-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/deposit_bank1"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/sh_bank"
                android:id="@+id/tv_depository_bank"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dibu"
            />

        <!-- 存管账号-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_deposit_account"
                android:layout_alignBottom="@+id/tv_deposit_account"
                android:layout_alignParentStart="true"
                android:text="@string/deposit_account1"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="645465545645664546"
                android:id="@+id/tv_deposit_account"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dibu"
            />

        <!-- 客户姓名-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_customer_name"
                android:layout_alignBottom="@+id/tv_customer_name"
                android:layout_alignParentStart="true"
                android:text="@string/customer_name1"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="陈咬金"
                android:id="@+id/tv_customer_name"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dibu"
            />

        <!--返回-->

        <Button

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/confirm_the_opening"
            android:text="@string/return1"
            android:onClick="onReturn"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
