<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.toos.lxh.deposittest.CheckCreditActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@mipmap/advertising"
            />
        <!--姓名-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:id="@+id/iv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/user_name"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/iv_user_name"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:hint="请填写真实姓名"
                android:textSize="14sp"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dibu"
            />
        <!--身份证-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:id="@+id/iv_user_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/user_card"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/iv_user_card"
                android:background="@null"
                android:hint="请填写身份证号"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="number"
                android:digits="0123456789xyzXYZ"
                android:textSize="14sp" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dibu"
            />
        <!--手机号-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:id="@+id/iv_user_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/user_name"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/iv_user_phone"
                android:background="@null"
                android:hint="请填写手机号"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="phone"
                android:textSize="14sp" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dibu"
            />

        <!-- 验证码 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            >

            <ImageView
                android:id="@+id/iv_user_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/user_code"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                />
            <EditText
                android:id="@+id/et_dynamic_code"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_toRightOf="@+id/iv_user_code"
                android:background="@null"
                android:layout_marginLeft="20dp"
                android:hint="@string/set_dynamic"
                android:layout_centerVertical="true"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="14sp"
                android:layout_marginRight="100dp"
                />

            <Button
                android:id="@+id/bt_gain_code"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="14dp"
                android:background="@drawable/check_button"
                android:text="@string/free_Access"
                android:textColor="@color/check_code"
                android:textSize="12dp" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dibu"
            />
        <!--一键查征信-->

        <Button
            android:id="@+id/bt_confirm_the_opening"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/confirm_the_opening_button"
            android:text="@string/check_the_ad"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
